make html more readable, fix header on smaller screens

--- a/src/style.css
+++ b/src/style.css
@@ -29,11 +29,10 @@ body {
 }
 
 .nav__link {
-  display: flex;
+  display: block;
   text-decoration: none;
   color: #000;
-  height: 60px;
-  line-height: 60px;
+  padding: 23px 0;
   margin-left: 20px;
   font-size: 12px;
   font-weight: 500;
